# large-file-upload

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/: requirements.txt  run.py
backend/app/: auth.py  config.py  db.py  main.py  rate_limiter.py  schemas.py  service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
