[project]
name = "large-file-upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.115.2",
    "pydantic>=2.12.0",
    "pyjwt==2.10.1",
    "python-multipart==0.0.12",
    "uvicorn[standard]==0.32.0",
]
